unpackaged/config/dev-demo/objects/Contact/fields/Business_Directory_Image__c.field-meta.xml
<CustomField>
    <fullName>Business_Directory_Image__c</fullName>
    <label>Business Directory Image</label>
    <type>Url</type>
</CustomField>