unpackaged/config/dev-demo/objects/Contact/fields/Business_Directory_Person_Image__c.field-meta.xml
<CustomField>
    <fullName>Business_Directory_Person_Image__c</fullName>
    <label>Business Directory Person Image</label>
    <length>500</length>
    <type>Html</type>
</CustomField>