unpackaged/config/dev-demo/objects/Contact/fields/Directory_Image__c.field-meta.xml
<CustomField>
    <fullName>Directory_Image__c</fullName>
    <label>Directory Image</label>
    <type>Url</type>
</CustomField>